sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_arrivalpos/errors.duarouter
Error: Invalid arrivalpos definition for vehicle '0'
Quitting (on error).
